Add the official logo
darcs-hash:20070225122446-4fc50-1718edeb4636661d82fa33fb49b64576da3dc4de.gz

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 * Christian Neukirchen <chneukirchen@gmail.com>
 * Rails adapter: Christoffer Sawicki <christoffer.sawicki@gmail.com>
+* Official Logo: Armin Ronacher
