Fix things that should have been fixed before the release *sigh*
darcs-hash:20070303172003-4fc50-a6aae212aba8b582ad5d8a414343592fd8216928.gz

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 = Rack, a modular Ruby webserver interface
 
-Rack provides minimal, modular and adaptable interface for developing
+Rack provides a minimal, modular and adaptable interface for developing
 web applications in Ruby.  By wrapping HTTP requests and responses in
 the simplest way possible, it unifies and distills the API for web
 servers, web frameworks, and software in between (the so-called
