Integrate Rack::Static
darcs-hash:20070311140658-4fc50-bc01fedf758eef91af2bc8a88fd90495c21713de.gz

--- a/README
+++ b/README
@@ -101,8 +101,10 @@ at my site:
 
 * XXX: Second public release 0.2.
   * Bug fixes in the Camping handler.
+  * Improved Rack::Response.
   * HTTP Basic authentication.
   * Cookie Sessions.
+  * Static file handler.
 
 == Contact
 
