--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 * Christian Neukirchen <chneukirchen@gmail.com>
 * Rails adapter: Christoffer Sawicki <christoffer.sawicki@gmail.com>
 * HTTP authentication: Tim Fletcher <twoggle@gmail.com>
-* Cookie sessions: Luc Heinrich <luc@honk-honk.com>
+* Cookie sessions, Static handler: Luc Heinrich <luc@honk-honk.com>
 * Official Logo: Armin Ronacher
