--- a/README
+++ b/README
@@ -126,6 +126,7 @@ You are also welcome to join the #rack channel on irc.freenode.net.
   Rack::Request interface.
 * Christoffer Sawicki, for the Rails adapter.
 * Tim Fletcher, for the HTTP authentication code.
+* Luc Heinrich for the Cookie sessions and the static file handler.
 * Armin Ronacher, for the logo and racktools.
 * Aredridel, for bug fixing.
 * Gary Wright, for proposing a better Rack::Response interface.
