Make Rack::Response possibly close the body
Proposed by Jonathan Buch

darcs-hash:20070531163615-4fc50-83cf2d6eb4610ffc4acb8884148e7d4ba5f7d978.gz

--- a/README
+++ b/README
@@ -130,6 +130,7 @@ You are also welcome to join the #rack channel on irc.freenode.net.
 * Armin Ronacher, for the logo and racktools.
 * Aredridel, for bug fixing.
 * Gary Wright, for proposing a better Rack::Response interface.
+* Jonathan Buch, for improvements regarding Rack::Response.
 * Alexander Kellett for testing the Gem and reviewing the announce.
 * Marcus Rückert, for help with configuring and debugging lighttpd.
 * The WSGI team for the well-done and documented work they've done and
