--- a/AUTHORS
+++ b/AUTHORS
@@ -2,5 +2,5 @@
 * Rails adapter: Christoffer Sawicki <christoffer.sawicki@gmail.com>
 * HTTP authentication: Tim Fletcher <twoggle@gmail.com>
 * Cookie sessions, Static handler: Luc Heinrich <luc@honk-honk.com>
-* Pool sessions: blink <blinketje@gmail.com>
+* Pool sessions, OpenID authentication: blink <blinketje@gmail.com>
 * Official Logo: Armin Ronacher
