--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 * Christian Neukirchen <chneukirchen@gmail.com>
-* Rails adapter: Christoffer Sawicki <christoffer.sawicki@gmail.com>
 * HTTP authentication: Tim Fletcher <twoggle@gmail.com>
 * Cookie sessions, Static handler: Luc Heinrich <luc@honk-honk.com>
 * Pool sessions, OpenID authentication: blink <blinketje@gmail.com>
+* LiteSpeed handler: Adrian Madrid
+* SCGI handler: Jeremy Evans
 * Official Logo: Armin Ronacher
