--- a/README
+++ b/README
@@ -112,6 +112,49 @@ at my site:
 
     gem install rack --source http://chneukirchen.org/releases/gems
 
+== Running the tests
+
+Testing Rack requires the test/spec testing framework:
+
+    gem install test-spec
+
+The full set of tests also test FCGI access with lighttpd so you will
+need lighttpd installed as well as the FCGI libraries and the fcgi gem installed:
+
+Download and install lighttpd:
+
+    http://www.lighttpd.net/download
+
+Installing the FCGI libraries:
+
+    curl -O http://www.fastcgi.com/dist/fcgi-2.4.0.tar.gz
+    tar xzvf fcgi-2.4.0.tar.gz
+    cd fcgi-2.4.0
+    ./configure --prefix=/usr/local
+    make
+    sudo make install
+    cd ..
+
+Installing the Ruby fcgi gem:
+
+    gem install fcgi
+
+On Unix-type operating systems make the following files executable:
+
+    chmod +x test/cgi/test
+    chmod +x test/cgi/test.ru
+    chmod +x test/cgi/test.fcgi
+    
+There are two rake-base test tasks:
+
+  rake test
+
+Tests all the fast tests.
+
+  rake fulltest
+
+Runs all the tests.
+
 == History
 
 * March 3rd, 2007: First public release 0.1.
