--- a/README
+++ b/README
@@ -171,6 +171,9 @@ There are two rake-based test tasks:
   * HTTP status 201 can contain a Content-Type and a body now.
   * Many bugfixes, especially related to Cookie handling.
 
+* XXX, 2008: Fourth public release 0.4.
+  * Many bugfixes, especially for pool sessions and URLMap.
+
 == Contact
 
 Please mail bugs, suggestions and patches to
@@ -183,15 +186,17 @@ You are also welcome to join the #rack channel on irc.freenode.net.
 
 == Thanks to
 
+* blink for the Pool sessions, OpenID support, many tweaks, patches
+  and bugreports.
 * Michael Fellinger, for the helpful discussion, bugfixes and a better
   Rack::Request interface.
 * Adrian Madrid, for the LiteSpeed handler.
 * Christoffer Sawicki, for the Rails adapter.
 * Tim Fletcher, for the HTTP authentication code.
 * Luc Heinrich for the Cookie sessions, the static file handler and bugfixes.
-* blink for the Pool sessions, OpenID support, various tweaks, and bugreports.
 * Armin Ronacher, for the logo and racktools.
 * Aredridel, for bug fixing.
+* Stephen Bannasch, for bug reports and documentation.
 * Gary Wright, for proposing a better Rack::Response interface.
 * Jonathan Buch, for improvements regarding Rack::Response.
 * Armin Röhrl, for tracking down bugs in the Cookie generator.
