--- a/README
+++ b/README
@@ -42,6 +42,7 @@ These frameworks include Rack adapters in their distributions:
 * Ramaze
 * Sinatra
 * Vintage
+* Waves
 
 Ruby on Rails can be run with the adapter included with Thin, which
 will be merged into a later Rack version.
@@ -118,9 +119,25 @@ Testing Rack requires the test/spec testing framework:
 
     gem install test-spec
 
-The full set of tests also test FCGI access with lighttpd so you will
-need lighttpd installed as well as the FCGI libraries and the fcgi gem
-installed:
+There are two rake-based test tasks:
+
+    rake test       tests all the fast tests (no Handlers or Adapters)
+    rake fulltest   runs all the tests
+
+The fast testsuite has no dependencies outside of the core Ruby
+installation and test-spec.
+
+To run the fast test suite completely, you need:
+
+  * camping
+  * mongrel
+  * fcgi
+  * ruby-openid
+  * memcache-client
+
+The full set of tests test FCGI access with lighttpd (on port
+9203) so you will need lighttpd installed as well as the FCGI
+libraries and the fcgi gem:
 
 Download and install lighttpd:
 
@@ -140,10 +157,9 @@ Installing the Ruby fcgi gem:
 
     gem install fcgi
 
-There are two rake-based test tasks:
+Furthermore, to test Memcache sessions, you need memcached (will be
+run on port 11211) and memcache-client installed.
 
-    rake test       tests all the fast tests (no Handlers or Adapters)
-    rake fulltest   runs all the tests
 
 == History
 
