Update emongrel and add swiftiplied mongrel

--- a/README
+++ b/README
@@ -14,6 +14,7 @@ which all Rack applications should conform to.
 The included *handlers* connect all kinds of web servers to Rack:
 * Mongrel
 * EventedMongrel
+* SwiftipliedMongrel
 * WEBrick
 * FCGI
 * CGI
