--- a/README
+++ b/README
@@ -208,7 +208,7 @@ run on port 11211) and memcache-client installed.
   * Improved tests.
   * Rack moved to Git.
 
-* XXX, 2009: Fifth public release 0.9.
+* January 6th, 2009: Fifth public release 0.9.
   * Rack is now managed by the Rack Core Team.
   * Rack::Lint is stricter and closer to the HTTP RFCs.
   * Added ConditionalGet middleware.
