--- a/README
+++ b/README
@@ -15,12 +15,16 @@ With Rack 1.0, the Rack specification (found in SPEC) changed in the
 following backward-incompatible ways.  This was done to properly
 support Ruby 1.9 and to deprecate some problematic techniques:
 
+* Rack::VERSION has been pushed to [1,0].
 * Header values must be Strings now, split on "\n".
-* Content-Length can be missing, in this case chunked transfer encoding is used.
+* rack.input must be rewindable and support reading into a buffer,
+  wrap with Rack::RewindableInput if it isn't.
+* Content-Length can be missing, in this case chunked transfer
+  encoding is used.
 * Bodies can now respond to #to_path with a filename to be served.
 * String bodies are deprecated and will not work with Ruby 1.9, use an
   Array with a single String instead.
-* Rack::VERSION has been pushed to [1,0].
+* rack.session is now specified.
 
 == Supported web servers
 
@@ -38,7 +42,8 @@ The included *handlers* connect all kinds of web servers to Rack:
 These web servers include Rack handlers in their distributions:
 * Ebb
 * Fuzed
-* Phusion Passenger (which is mod_rack for Apache)
+* Phusion Passenger (which is mod_rack for Apache and for nginx)
+* Unicorn
 
 Any valid Rack app will run the same on all these handlers, without
 changing anything.
@@ -49,6 +54,7 @@ The included *adapters* connect Rack with existing Ruby web frameworks:
 * Camping
 
 These frameworks include Rack adapters in their distributions:
+* Camping
 * Coset
 * Halcyon
 * Mack
@@ -57,13 +63,15 @@ These frameworks include Rack adapters in their distributions:
 * Racktools::SimpleApplication
 * Ramaze
 * Ruby on Rails
+* Rum
 * Sinatra
 * Sin
 * Vintage
 * Waves
+* Wee
 
 Current links to these projects can be found at
-http://ramaze.net/#other-frameworks
+http://wiki.ramaze.net/Home#other-frameworks
 
 == Available middleware
 
@@ -136,6 +144,10 @@ at my site:
 
     gem install rack --source http://chneukirchen.org/releases/gems/
 
+Or you can install directly from GitHub:
+
+    gem install rack-rack --source=http://gems.github.com
+
 == Running the tests
 
 Testing Rack requires the test/spec testing framework:
@@ -153,10 +165,11 @@ installation and test-spec.
 To run the test suite completely, you need:
 
   * camping
-  * mongrel
   * fcgi
-  * ruby-openid
   * memcache-client
+  * mongrel
+  * ruby-openid
+  * thin
 
 The full set of tests test FCGI access with lighttpd (on port
 9203) so you will need lighttpd installed as well as the FCGI
@@ -240,6 +253,23 @@ run on port 11211) and memcache-client installed.
 * January 9th, 2009: Sixth public release 0.9.1.
   * Fix directory traversal exploits in Rack::File and Rack::Directory.
 
+* April 25th, 2009: Seventh public release 1.0.
+  * SPEC change: header values must be Strings now, split on "\n".
+  * SPEC change: Content-Length not enforced anymore, chunking is used
+    when missing.
+  * SPEC change: bodies can respond #to_path with a filename to be served.
+  * NOTE: String bodies break in 1.9, use an Array consisting of a
+    single String instead.
+  * New middleware Rack::Lock.
+  * New middleware Rack::ContentType.
+  * Rack::Reloader has been rewritten.
+  * Major update to Rack::Auth::OpenID.
+  * Support for nested parameter parsing in Rack::Response.
+  * Support for redirects in Rack::Response.
+  * HttpOnly cookie support in Rack::Response.
+  * The Rakefile has been rewritten.
+  * Many bugfixes and small improvements.
+
 == Contact
 
 Please mail bugs, suggestions and patches to
@@ -250,7 +280,7 @@ Mailing list archives are available at
 
 There is a bug tracker at <http://rack.lighthouseapp.com/>.
 
-Git repository (patches rebased on master are most welcome):
+Git repository (send Git patches to the mailing list):
 * http://github.com/rack/rack
 * http://git.vuxu.org/cgi-bin/gitweb.cgi?p=rack.git
 
@@ -275,8 +305,10 @@ would like to thank:
 * Luc Heinrich for the Cookie sessions, the static file handler and bugfixes.
 * Armin Ronacher, for the logo and racktools.
 * Aredridel, Ben Alpert, Dan Kubb, Daniel Roethlisberger, Matt Todd,
-  Tom Robinson, and Phil Hagelberg for bug fixing and other
-  improvements.
+  Tom Robinson, Phil Hagelberg, and S. Brent Faulkner for bug fixing
+  and other improvements.
+* Brian Candler, for Rack::ContentType.
+* Graham Batty, for improved handler loading.
 * Stephen Bannasch, for bug reports and documentation.
 * Gary Wright, for proposing a better Rack::Response interface.
 * Jonathan Buch, for improvements regarding Rack::Response.
