--- a/README
+++ b/README
@@ -11,21 +11,13 @@ which all Rack applications should conform to.
 
 == Specification changes in this release
 
-With Rack 1.0, the Rack specification (found in SPEC) changed in the
-following backward-incompatible ways.  This was done to properly
-support Ruby 1.9 and to deprecate some problematic techniques:
+With Rack 1.1, the Rack specification (found in SPEC) changed in the
+following backward-incompatible ways.
 
-* Rack::VERSION has been pushed to [1,0].
-* Header values must be Strings now, split on "\n".
-* rack.input must be rewindable and support reading into a buffer,
-  wrap with Rack::RewindableInput if it isn't.
-* Content-Length can be missing, in this case chunked transfer
-  encoding is used.
-* Bodies can now additionally respond to #to_path with a filename to
-  be served.
-* String bodies are deprecated and will not work with Ruby 1.9, use an
-  Array with a single String instead.
-* rack.session is now specified.
+* Rack::VERSION has been pushed to [1,1].
+* rack.logger is now specified.
+* The SPEC now allows subclasses of the required types.
+* rack.input has to be opened in binary mode.
 
 == Supported web servers
 
@@ -45,6 +37,7 @@ These web servers include Rack handlers in their distributions:
 * Fuzed
 * Phusion Passenger (which is mod_rack for Apache and for nginx)
 * Unicorn
+* Glassfish v3
 
 Any valid Rack app will run the same on all these handlers, without
 changing anything.
@@ -70,6 +63,7 @@ These frameworks include Rack adapters in their distributions:
 * Vintage
 * Waves
 * Wee
+* ... and many others.
 
 Current links to these projects can be found at
 http://wiki.ramaze.net/Home#other-frameworks
@@ -136,7 +130,7 @@ By default, the lobster is found at http://localhost:9292.
 
 == Installing with RubyGems
 
-A Gem of Rack is available.  You can install it with:
+A Gem of Rack is available at gemcutter.org.  You can install it with:
 
     gem install rack
 
@@ -165,7 +159,6 @@ To run the test suite completely, you need:
   * fcgi
   * memcache-client
   * mongrel
-  * ruby-openid
   * thin
 
 The full set of tests test FCGI access with lighttpd (on port
@@ -284,33 +277,37 @@ run on port 11211) and memcache-client installed.
   * Many Ruby 1.9 fixes.
 
 * December ??th, 2009: Ninth public release 1.1.0.
-  * Added Utils.build_nested_query to complement Utils.parse_nested_query
-  * Added Utils::Multipart.build_multipart to complement Utils::Multipart.parse_multipart
-  * Allow MockRequest to accept hash params
-  * Enforce binary encoding in RewindableInput
+  * Moved Auth::OpenID to rack-contrib.
+  * SPEC change that relaxes Lint slightly to allow subclasses of the
+    required types
   * SPEC change to document rack.input binary mode in greator detail
-  * Set correct external_encoding for handlers that don't use RewindableInput
-  * Added ogv mime type so that firefox can read theora videos using the html5 <video> tag
-  * Return an empty string for Request#host if HTTP_HOST and SERVER_NAME are both missing
-  * Extracted set and delete cookie helpers into Utils so they can be used outside Response
-  * Update Rack::Utils::HTTP_STATUS_CODES hash
-  * SPEC change that relaxes Lint slightly to allow subclasses of the required types
-  * Refactored rackup into Rack::Server
-  * Removed Auth::OpenID
-  * Response should call #to_i on the status
-  * Added mime type for .manifest
-  * Optimizations to HeaderHash
+  * SPEC define optional rack.logger specification
   * Imported Config middleware
   * Imported ETag middleware
   * Imported Runtime middleware
   * Imported Sendfile middleware
-  * SPEC define optional rack.logger specification
   * New Logger and NullLogger middlewares
+  * Added mime type for .ogv and .manifest.
+  * Use Content-Type to determine POST params parsing
+  * Update Rack::Utils::HTTP_STATUS_CODES hash
+  * Add status code lookup utility
+  * Response should call #to_i on the status
   * Add Request#user_agent
   * Request#host knows about forwared host
-  * Extract parse_query and parse_multipart in Request so subclasses can change their behavior
-  * Add status code lookup utility
-  * Use Content-Type to determine POST params parsing
+  * Return an empty string for Request#host if HTTP_HOST and
+    SERVER_NAME are both missing
+  * Allow MockRequest to accept hash params
+  * Optimizations to HeaderHash
+  * Refactored rackup into Rack::Server
+  * Added Utils.build_nested_query to complement Utils.parse_nested_query
+  * Added Utils::Multipart.build_multipart to complement
+    Utils::Multipart.parse_multipart
+  * Extracted set and delete cookie helpers into Utils so they can be
+    used outside Response
+  * Extract parse_query and parse_multipart in Request so subclasses
+    can change their behavior
+  * Enforce binary encoding in RewindableInput
+  * Set correct external_encoding for handlers that don't use RewindableInput
 
 == Contact
 
@@ -345,8 +342,14 @@ would like to thank:
 * Luc Heinrich for the Cookie sessions, the static file handler and bugfixes.
 * Armin Ronacher, for the logo and racktools.
 * Aredridel, Ben Alpert, Dan Kubb, Daniel Roethlisberger, Matt Todd,
-  Tom Robinson, Phil Hagelberg, and S. Brent Faulkner for bug fixing
-  and other improvements.
+  Tom Robinson, Phil Hagelberg, S. Brent Faulkner, Bosko Milekic,
+  Daniel Rodríguez Troitiño, Genki Takiuchi, Geoffrey Grosenbach,
+  Julien Sanchez, Kamal Fariz Mahyuddin, Masayoshi Takahashi, Patrick
+  Aljordm, Mig, and Kazuhiro Nishiyama for bug fixing and other
+  improvements.
+* Eric Wong, Hongli Lai, Jeremy Kemper for their continuous support
+  and API improvements.
+* Yehuda Katz and Carl Lerche for refactoring rackup.
 * Brian Candler, for Rack::ContentType.
 * Graham Batty, for improved handler loading.
 * Stephen Bannasch, for bug reports and documentation.
