--- a/README
+++ b/README
@@ -35,9 +35,12 @@ The included *handlers* connect all kinds of web servers to Rack:
 These web servers include Rack handlers in their distributions:
 * Ebb
 * Fuzed
-* Phusion Passenger (which is mod_rack for Apache and for nginx)
-* Unicorn
 * Glassfish v3
+* Phusion Passenger (which is mod_rack for Apache and for nginx)
+* Rainbows
+* Sunshowers
+* Unicorn
+* Zbatery
 
 Any valid Rack app will run the same on all these handlers, without
 changing anything.
